2004-06-23  Todd Berman  <tberman@off.net>

	* Commands/FileCommands.cs: Cleanup a bit, move some code around.
	* Gui/Dialogs/NewFileDialog.cs: Convert to using DispatchService.
	This also tests the BackgroundDispatch method, which seems to be
	working fine. Now New File will no longer lock up the GUI at all.
	Also cleanup misc code, and unused pieces.

2004-06-23  Todd Berman  <tberman@off.net>

	* Gui/Pads/ClassScout/ClassScout.cs: use DispatchService instead of
	IdleWork stuff.
	* Services/DispatchService/DispatchService.cs: new service, used to
	pass messages to the gui, or a background thread. The gui stuff has
	been tested by the ClassScout above, the background thread dispatching
	has yet to be tested.
	* Makefile.am: Add DispatchService.cs

2004-06-21  John Luke <jluke@cfl.rr.com>

	* Gui/Dialogs/OptionPanels/ProjectOptions/CompileFileProjectOptions.cs:
	use the messageservice for a the error dialog
	don't skip the first item when storing whether files should be	
	included, fixes bug # 60363
	* Commands/ProjectBrowserCommands/FolderNodeCommands.cs:
	Change the title of Add Files to Add Files, so it will be clearer
	you can select more than one file
	put the name of the file in the Copy or Move dialog when adding
	an external file, fixes bug # 59516

2004-06-21  Todd Berman  <tberman@off.net>

	* Commands/AutostartCommands.cs: workaround icewm issue, dont show
	tip of the day dialog automatically under any circumstance.

2004-06-21  John Luke <jluke@cfl.rr.com>

	* Gui/Pads/OpenTaskView.cs: implement a popup menu for copying
	a task to the clipboard, bug #56817

2004-06-20  Todd Berman  <tberman@off.net>

	* Services/ParserService/CodeCompletionDatabase.cs: fix nullref in
	file types that dont have a parser.

2004-06-20  Todd Berman  <tberman@off.net>

	* Gui/Workbench/Layouts/SdiWorkspaceLayout.cs: fix bug #60352.

2004-06-18  Todd Berman  <tberman@off.net>

	* Gui/Workbench/Layouts/SdiWorkspaceLayout.cs: cleanups, and a small
	icon related fixup.
